# ticket-intellect

./: .env  .replit  LICENSE  README.md  app.py  future_prediction_game.py  number_guess_game.py  pyproject.toml  test.py
