[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "autogen>=0.9.1.post0",
    "groq>=0.24.0",
    "numpy>=2.2.5",
    "openai>=1.78.1",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "pyarrow>=20.0.0",
    "streamlit>=1.45.1",
]
